--- a/data/html/index.html
+++ b/data/html/index.html
@@ -26,10 +26,7 @@
 
     <body>
       <div class="container">
-          <img src="https://image.freepik.com/free-icon/binary-code-numbers-on-monitor-screen_318-56667.png" width="50" height="50" / />
-          <br / />
-          Neela Lan Platform
-          <br  />
+          <img src="https://camo.githubusercontent.com/c18fce959b670fe329c8c46e9c5779999a00c3bf/68747470733a2f2f7333312e706f7374696d672e6f72672f6b757a383467776a762f4e65656c615f6c6f676f30335f642e706e67"  height="200" / />
           <div class="error"></div>
           <p>
             <form action="/login" method="post">
